# EngineSandbox

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Core/: CMakeLists.txt  Core.cpp  Core.h  Game.cpp  Game.h  IMGUIHandler.cpp  IMGUIHandler.h  Logger.h  Profiler.cpp  Profiler.h  RenderPass.h  SDLHandler.cpp  SDLHandler.h  SceneManager.cpp  SceneManager.h  State.h  SystemComponentManager.cpp  SystemComponentManager.h  Utils.h  WindowParams.cpp  WindowParams.h
Core/Assets/: AssetId.cpp  AssetId.h  AssetManager.cpp  AssetManager.h  AssimpImporter.cpp  AssimpImporter.h  BaseResource.h  FileWatcher.h  ShaderManager.cpp  ShaderManager.h  SimpleTextureAssetJob.cpp  SimpleTextureAssetJob.h  TextureManager.cpp  TextureManager.h  ThreadSafeQueue.h
Core/Components/System/: EditorShaderSystemComponent.cpp  EditorShaderSystemComponent.h  FpsCounterSystemComponent.cpp  FpsCounterSystemComponent.h  SceneCameraComponent.cpp  SceneCameraComponent.h
Core/Editor/: TextDocument.h
Core/Imgui/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_stdlib.h
Core/Renderer/: Light.h  Material.cpp  Material.h  RenderPass.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
Core/Systems/: Entity.cpp  Entity.h  FileIO.h  Light.cpp  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  Octree.cpp  Octree.h  QuadTree.cpp  QuadTree.h  Transform.cpp  Transform.h
Core/Systems/Camera/: Camera.cpp  Camera.h  CameraSnapshot.cpp  CameraSnapshot.h  FlyCamera.cpp  FlyCamera.h
Core/Systems/Geometry/: BoundingBox.cpp  BoundingBox.h  BoundingFrustum.cpp  BoundingFrustum.h  BoundingSphere.cpp  BoundingSphere.h  GeomDefines.h  Plane.cpp  Plane.h  Rect.cpp  Rect.h
Core/Systems/PostProcessing/: SSAO.cpp  SSAO.h
Core/Systems/Rendering/: GPUCommandList.h  Gizmo.cpp  Gizmo.h  IBLSkybox.cpp  IBLSkybox.h  Mesh.cpp  Mesh.h  Primitives.cpp  Primitives.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h  Texture.h  TextureBuffer.cpp  TextureBuffer.h  Vertex.h
Core/Systems/Rendering/Primitives/: Cube.cpp  Cube.h  PlanePrimitive.cpp  PlanePrimitive.h  Quad.cpp  Quad.h  Sphere.cpp  Sphere.h
Core/Systems/UI/: UIHelper.h
Data/: config.json
Data/Levels/: config.json
Data/MaterialDefinitions/: iron.json
Data/Shaders/: base.vert  basic_texture.vert  color.frag  color.vert  common.frag  common.vert  error.frag  model_loading.frag  model_loading.vert
Data/Shaders/deferred/: gbuffer.frag  gbuffer.vert  ssao_geometryBuffer.frag  ssao_geometryBuffer.vert  ssao_lighting.frag
Data/Shaders/lit/: advancedLighting.frag  basic.frag  basic.vert  blinn_phong_shadows.frag  default.vert  default_simple.vert  multiple_lights.frag  multiple_lights.vert  refraction.frag  refraction.vert  standard.vert
Data/Shaders/pbr/: pbr.frag  pbr.vert
Data/Shaders/postfx/: bloom_final.frag  bloom_final.vert  blur.frag
Data/Shaders/screen/: debug_quad.frag  framebuffer.frag  screen_texture.frag  shadow_depth.frag  shadow_depth.vert  shadow_mapping.frag  shadow_mapping.vert  ssao.frag  ssao_blur.frag
Data/Shaders/shadows/: point_shadows_depth.geom
Data/Shaders/skybox/: horizon_sun.frag  horizontal_gradient.frag  skybox.frag
Data/Shaders/unlit/: color.frag  textured.frag  white.frag
EmptyLauncher/: CMakeLists.txt  DefaultState.cpp  DefaultState.h  EmptyLauncher.cpp  EmptyLauncher.h  main.cpp
FrameBuffer/: CMakeLists.txt  DefaultState.cpp  DefaultState.h
RendererOgl/: CMakeLists.txt  WindowParams.h
ShadowMaps/: CMakeLists.txt  ShadowMaps.cpp  ShadowMaps.h
States/: DeferredRendering.cpp  DeferredRendering.h  IBLSpecState.cpp  IBLSpecState.h  InstancingState.cpp  InstancingState.h  SSAOState.cpp  SSAOState.h
TerrainDemo/: CMakeLists.txt  TerrainDemo.cpp  TerrainDemo.h
